--- a/localization/web-app-es_ES.pot
+++ b/localization/web-app-es_ES.pot
@@ -8,37 +8,39 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2014-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2014-12-03 23:38+0100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: es_ES\n"
+"X-Generator: Poedit 1.6.10\n"
 
 #: web-app.php:29
 msgid "Settings"
-msgstr ""
+msgstr "Ajustes"
 
 #: web-app.php:40
 msgid "General Options"
-msgstr ""
+msgstr "Opciones Generales"
 
 #: web-app.php:41
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: web-app.php:101
 msgid "Upload Image"
-msgstr ""
+msgstr "Subir Imagen"
 
 #: web-app.php:129
 msgid "You do not have sufficient permissions to access this page."
-msgstr ""
+msgstr "No tienes permisos suficientes para acceder a esta página."
 
 #: web-app.php:143
 msgid "Save options"
-msgstr ""
+msgstr "Guardar opciones"
 
 #: web-app.php:147
 msgid "Coming soon"
-msgstr ""
+msgstr "Próximamente"
 
 #. Plugin Name of the plugin/theme
 msgid "Web App"
@@ -50,7 +52,7 @@ msgstr ""
 
 #. Description of the plugin/theme
 msgid "Create your splash screens for web apps at a glance"
-msgstr ""
+msgstr "Crea las splash screens para web apps de manera sencilla"
 
 #. Author of the plugin/theme
 msgid "Pixelonce"
